--- a/react/package.json
+++ b/react/package.json
@@ -30,6 +30,7 @@
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.482.0",
     "nanoid": "^5.0.7",
     "notistack": "^3.0.1",
     "plotly.js": "^3.0.0",
@@ -46,9 +47,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
+    "@types/node": "^22.13.10",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.3",
+    "autoprefixer": "10.4.14",
     "axios-mock-adapter": "^2.1.0",
     "cross-env": "^7.0.3",
     "customize-cra": "^1.0.0",
@@ -58,6 +61,9 @@
     "eslint-plugin-react-refresh": "^0.4.13",
     "gh-pages": "^6.2.0",
     "globals": "^15.11.0",
+    "postcss": "8.4.27",
+    "tailwindcss": "3.3.3",
+    "typescript": "^5.8.2",
     "vite": "^5.4.9",
     "vite-plugin-pwa": "^0.20.5"
   }
