--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -1,42 +1,76 @@
 aniso8601==10.0.0
+asttokens==3.0.0
 beautifulsoup4==4.13.3
 blinker==1.9.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
+clarabel==0.10.0
 click==8.1.8
 colorama==0.4.6
 contourpy==1.3.1
+cvxpy==1.6.4
 cycler==0.12.1
+decorator==5.2.1
+dolphindb==3.0.2.4
+ecos==2.0.14
+empyrical==0.5.5
+exceptiongroup==1.2.2
+executing==2.2.0
 Flask==3.1.0
 Flask-RESTful==0.3.10
 fonttools==4.56.0
 frozendict==2.4.6
+future==1.0.0
 greenlet==3.1.1
 idna==3.10
+ipython==8.34.0
 itsdangerous==2.2.0
+jedi==0.19.2
 Jinja2==3.1.6
+joblib==1.4.2
 kiwisolver==1.4.8
+lxml==5.3.1
 MarkupSafe==3.0.2
 marshmallow==3.26.1
 matplotlib==3.10.1
+matplotlib-inline==0.1.7
 multitasking==0.0.11
-numpy==2.2.4
+numpy==1.26.4
+osqp==1.0.0
 packaging==24.2
 pandas==2.2.3
+pandas-datareader==0.10.0
+parso==0.8.4
+patsy==1.0.1
 peewee==3.17.9
 pillow==11.1.0
 platformdirs==4.3.6
+plotly==5.24.1
+prompt_toolkit==3.0.50
+pure_eval==0.2.3
+pyfolio==0.9.2
+Pygments==2.19.1
 pyparsing==3.2.1
+pyportfolioopt==1.5.6
 python-dateutil==2.9.0.post0
 pytz==2025.1
 requests==2.32.3
-setuptools==75.8.0
+scikit-learn==1.6.1
+scipy==1.15.2
+scs==3.2.7.post2
+seaborn==0.13.2
 six==1.17.0
 soupsieve==2.6
 SQLAlchemy==2.0.39
+stack-data==0.6.3
+statsmodels==0.14.4
+tenacity==9.0.0
+threadpoolctl==3.6.0
+traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2025.1
+Unidecode==1.3.8
 urllib3==2.3.0
+wcwidth==0.2.13
 Werkzeug==3.1.3
-wheel==0.45.1
 yfinance==0.2.54
