--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -1,11 +1,18 @@
+amqp==5.3.1
 aniso8601==10.0.0
 asttokens==3.0.0
+async-timeout==5.0.1
 beautifulsoup4==4.13.3
+billiard==4.2.1
 blinker==1.9.0
+celery==5.4.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
 clarabel==0.10.0
 click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 colorama==0.4.6
 contourpy==1.3.1
 cvxpy==1.6.4
@@ -30,6 +37,7 @@ jedi==0.19.2
 Jinja2==3.1.6
 joblib==1.4.2
 kiwisolver==1.4.8
+kombu==5.5.2
 lxml==5.3.1
 MarkupSafe==3.0.2
 marshmallow==3.26.1
@@ -55,6 +63,7 @@ pyparsing==3.2.1
 pyportfolioopt==1.5.6
 python-dateutil==2.9.0.post0
 pytz==2025.1
+redis==5.2.1
 requests==2.32.3
 scikit-learn==1.6.1
 scipy==1.15.2
@@ -69,9 +78,10 @@ tenacity==9.0.0
 threadpoolctl==3.6.0
 traitlets==5.14.3
 typing_extensions==4.12.2
-tzdata==2025.1
+tzdata==2025.2
 Unidecode==1.3.8
 urllib3==2.3.0
+vine==5.1.0
 wcwidth==0.2.13
 Werkzeug==3.1.3
 yfinance==0.2.54
