--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Ignore SQLite database file
 backend/db.sqlite3
 backend/dolphindb
-
+flask/app/utils/export/
 
 flask/logs/
 flask/logs/ibov_api.log
@@ -20,4 +20,5 @@ backend/staticfiles/
 # Ignore the virtual environment directory
 webenv/
 backenv/
+
 node_modules
