--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -5,7 +5,7 @@ async-timeout==5.0.1
 beautifulsoup4==4.13.3
 billiard==4.2.1
 blinker==1.9.0
-celery==5.4.0
+celery==5.5.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
 clarabel==0.10.0
@@ -26,10 +26,13 @@ executing==2.2.0
 Flask==3.1.0
 flask-cors==5.0.1
 Flask-RESTful==0.3.10
+flower==2.0.1
 fonttools==4.56.0
 frozendict==2.4.6
 future==1.0.0
 greenlet==3.1.1
+gunicorn==23.0.0
+humanize==4.12.2
 idna==3.10
 ipython==8.34.0
 itsdangerous==2.2.0
@@ -52,10 +55,13 @@ pandas-datareader==0.10.0
 parso==0.8.4
 patsy==1.0.1
 peewee==3.17.9
+pexpect==4.9.0
 pillow==11.1.0
 platformdirs==4.3.6
 plotly==5.24.1
+prometheus_client==0.21.1
 prompt_toolkit==3.0.50
+ptyprocess==0.7.0
 pure_eval==0.2.3
 pyfolio==0.9.2
 Pygments==2.19.1
@@ -76,6 +82,7 @@ stack-data==0.6.3
 statsmodels==0.14.4
 tenacity==9.0.0
 threadpoolctl==3.6.0
+tornado==6.4.2
 traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2025.2
